# crex

./: Cargo.toml  README.md
src/: lib.rs
test_lib/: Cargo.toml  build.rs
test_lib/dylib/: Cargo.toml
test_lib/dylib/src/: lib.rs
test_lib/internal/: Cargo.toml
test_lib/internal/src/: funcs.c  lib.rs
test_lib/src/: funcs.c  lib.rs
