[package]
name = "test_lib"
description = "A wrapper crate for the C bindings that can be used both dynamically and statically"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
test_internal = { path = "./internal" }
test_dylib = { path = "./dylib", optional = true }

[features]
dynamic = [ "dep:test_dylib" ]
variadic = [ "test_internal/variadic", "test_dylib?/variadic" ]
